# BUAA_algorithm

./: CMakeLists.txt  README.md  main.cpp
2015/: 2015_1.cpp  2015_2.cpp
2016/: 2016_1.cpp  2016_2.cpp
2017/: 2017_1.cpp  2017_2.cpp  2017_3.cpp
2018/: 2018_1.cpp  2018_2.cpp
2019/: 2019_1.cpp  2019_2.cpp  2019_3.cpp  2019_4.cpp
2021/: 2021_1.cpp  2021_2.cpp
2022/: 2022_1.cpp  2022_2.cpp
