cmake_minimum_required(VERSION 3.22)
project(untitled)

set(CMAKE_CXX_STANDARD 14)

add_executable(P0 main.cpp)
add_executable(P2022_1 2022/2022_1.cpp)
add_executable(P2022_2 2022/2022_2.cpp)
add_executable(P2021_1 2021/2021_1.cpp)
add_executable(P2021_2 2021/2021_2.cpp)
add_executable(P2019_1 2019/2019_1.cpp)
add_executable(P2019_2 2019/2019_2.cpp)
add_executable(P2019_3 2019/2019_3.cpp)
add_executable(P2019_4 2019/2019_4.cpp)
add_executable(P2018_1 2018/2018_1.cpp)
add_executable(P2018_2 2018/2018_2.cpp)
add_executable(P2017_1 2017/2017_1.cpp)
add_executable(P2017_2 2017/2017_2.cpp)
add_executable(P2017_3 2017/2017_3.cpp)
add_executable(P2016_1 2016/2016_1.cpp)
add_executable(P2016_2 2016/2016_2.cpp)




